@@ -923,7 +923,7 @@ murrine_rgba_draw_frame (cairo_t *cr,
 		murrine_set_color_rgba (cr, &highlight, 0.5);
 		cairo_stroke (cr);
 	}
-	else if (frame->shadow != MRN_SHADOW_NONE && frame->shadow != MRN_SHADOW_FLAT)
+	else if (frame->shadow != MRN_SHADOW_FLAT)
 	{
 		ShadowParameters shadow;
 		shadow.corners = widget->corners;
@@ -1030,7 +1030,6 @@ murrine_rgba_draw_tab (cairo_t *cr,
                        int x, int y, int width, int height)
 {
 	const float      RADIUS = 3.0;
-	int              corners;
 	const MurrineRGB *stripe_fill = &colors->spot[1];
 	const MurrineRGB *stripe_border = &colors->spot[2];
 	const MurrineRGB *fill = &colors->bg[widget->state_type];
@@ -1055,24 +1054,14 @@ murrine_rgba_draw_tab (cairo_t *cr,
 		height += RADIUS;
 
 		if (tab->gap_side == MRN_GAP_TOP)
-		{
 			cairo_translate (cr, 0.0, -3.0); /* gap at the other side */
-			corners = MRN_CORNER_BOTTOMLEFT | MRN_CORNER_BOTTOMRIGHT;
-		}
-		else
-			corners = MRN_CORNER_TOPLEFT | MRN_CORNER_TOPRIGHT;
 	}
 	else
 	{
 		width += RADIUS;
 
 		if (tab->gap_side == MRN_GAP_LEFT)
-		{
 			cairo_translate (cr, -3.0, 0.0); /* gap at the other side */
-			corners = MRN_CORNER_TOPRIGHT | MRN_CORNER_BOTTOMRIGHT;
-		}
-		else
-			corners = MRN_CORNER_TOPLEFT | MRN_CORNER_BOTTOMLEFT;
 	}
 
 /*	murrine_set_color_rgba (cr, &colors->bg[0], 0.0); */
@@ -1084,7 +1073,7 @@ murrine_rgba_draw_tab (cairo_t *cr,
 	if (widget->roundness < 2)
 		cairo_rectangle (cr, 0, 0, width-1, height-1);
 	else
-		clearlooks_rounded_rectangle (cr, 0, 0, width-1, height-1, widget->roundness, corners);
+		clearlooks_rounded_rectangle (cr, 0, 0, width-1, height-1, widget->roundness, widget->corners);
 
 	/* Draw fill */
 	if (!widget->active)
@@ -1128,7 +1117,7 @@ murrine_rgba_draw_tab (cairo_t *cr,
 		if (widget->roundness < 2)
 			cairo_rectangle (cr, 0, 0, width-1, height-1);
 		else
-			clearlooks_rounded_rectangle (cr, 0, 0, width-1, height-1, widget->roundness, corners);
+			clearlooks_rounded_rectangle (cr, 0, 0, width-1, height-1, widget->roundness, widget->corners);
 
 		cairo_pattern_add_color_stop_rgba (pattern, 0.00, shade1.r, shade1.g, shade1.b, NOTEBOOK_OPACITY);
 		cairo_pattern_add_color_stop_rgba (pattern, 0.45, shade2.r, shade2.g, shade2.b, NOTEBOOK_OPACITY);
@@ -1166,7 +1155,7 @@ murrine_rgba_draw_tab (cairo_t *cr,
 		if (widget->roundness < 2)
 			cairo_rectangle (cr, 1, 1, width-3, height-3);
 		else
-			clearlooks_rounded_rectangle (cr, 1, 1, width-3, height-3, widget->roundness, corners);
+			clearlooks_rounded_rectangle (cr, 1, 1, width-3, height-3, widget->roundness, widget->corners);
 
 		cairo_pattern_add_color_stop_rgba (pattern, 0.00, shade1.r, shade1.g, shade1.b, 0.5*NOTEBOOK_OPACITY);
 		cairo_pattern_add_color_stop_rgba (pattern, 0.45, shade2.r, shade2.g, shade2.b, 0.5*NOTEBOOK_OPACITY);
@@ -1212,7 +1201,7 @@ murrine_rgba_draw_tab (cairo_t *cr,
 		if (widget->roundness < 2)
 			cairo_rectangle (cr, 0, 0, width-1, height-1);
 		else
-			clearlooks_rounded_rectangle (cr, 0, 0, width-1, height-1, widget->roundness, corners);
+			clearlooks_rounded_rectangle (cr, 0, 0, width-1, height-1, widget->roundness, widget->corners);
 
 		cairo_pattern_add_color_stop_rgba (pattern, 0.00, shade1.r, shade1.g, shade1.b, NOTEBOOK_OPACITY);
 		cairo_pattern_add_color_stop_rgba (pattern, 0.45, shade2.r, shade2.g, shade2.b, NOTEBOOK_OPACITY);
@@ -1250,7 +1239,7 @@ murrine_rgba_draw_tab (cairo_t *cr,
 		if (widget->roundness < 2)
 			cairo_rectangle (cr, 1, 1, width-3, height-3);
 		else
-			clearlooks_rounded_rectangle (cr, 1, 1, width-3, height-3, widget->roundness, corners);
+			clearlooks_rounded_rectangle (cr, 1, 1, width-3, height-3, widget->roundness, widget->corners);
 
 		cairo_pattern_add_color_stop_rgba (pattern, 0.00, shade1.r, shade1.g, shade1.b, 0.5*NOTEBOOK_OPACITY);
 		cairo_pattern_add_color_stop_rgba (pattern, 0.45, shade2.r, shade2.g, shade2.b, 0.5*NOTEBOOK_OPACITY);
@@ -1261,7 +1250,7 @@ murrine_rgba_draw_tab (cairo_t *cr,
 		cairo_pattern_destroy (pattern);
 	}
 
-	murrine_rounded_rectangle (cr, 0, 0, width-1, height-1, widget->roundness, corners);
+	murrine_rounded_rectangle (cr, 0, 0, width-1, height-1, widget->roundness, widget->corners);
 	murrine_set_color_rgb  (cr, border);
 	cairo_stroke (cr);
 }
