@@ -1,5 +1,13 @@
 2008-09-12  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* src/murrine_draw.c (murrine_draw_frame), (murrine_draw_tab):
+	* src/murrine_draw_rgba.c (murrine_rgba_draw_frame),
+	(murrine_rgba_draw_tab):
+	* src/murrine_style.c (murrine_style_draw_box_gap):
+	Removed useless code
+
+2008-09-12  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
 	* src/murrine_draw.c (murrine_draw_tab):
 	* src/murrine_draw_rgba.c (murrine_rgba_draw_tab):
 	Fixed two rendering errors of the highlight, introduced in r60
